<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/sender_header"
        android:text="@string/sender_header"
        style="@style/header"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/string_input"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline" />

    <EditText
        android:id="@+id/string_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/string_input"
        android:autofillHints=""
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintTop_toBottomOf="@id/sender_header"
        app:layout_constraintBottom_toTopOf="@id/btn_transition_with_data"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"/>

    <Button
        android:id="@+id/btn_transition_with_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_transition_with_data"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/string_input"
        app:layout_constraintBottom_toTopOf="@id/btn_transition_without_data"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"/>

    <Button
        android:id="@+id/btn_transition_without_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_transition_without_data"
        app:layout_constraintTop_toBottomOf="@id/btn_transition_with_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>