<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/receiver_header"
        android:text="@string/receiver_header"
        style="@style/header"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/string_output"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline" />

    <TextView
        android:id="@+id/string_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/receiver_header"
        app:layout_constraintBottom_toTopOf="@id/btn_back"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"/>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/string_output"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>